Mobile Navbar Spacing Attempted Fix

--- a/_sass/includes/navbar.scss
+++ b/_sass/includes/navbar.scss
@@ -22,42 +22,47 @@ nav.main {
         }
 
         .links {
+            display: none;
             justify-content: center;
             align-items: center;
             visibility: hidden;
             opacity: 0;
-            max-height: 0px;
-            overflow: hidden;
+            //max-height: 0px;
+            //overflow: hidden;
+            gap: 0px;
             transition: visibility 0s, opacity 0.3s, max-height 0.3s;
+            margin-bottom: 0px;
 
             .link {
                 min-width: 6rem;
                 align-items: center;
-                display: flex;
-                padding-top: 0px;
-                padding-bottom: 0px;
-                transition: padding-top 0.3s, padding-bottom 0.3s;
+                //display: flex;
 
                 > * {
-                    max-height: 0px;
-                    height: 0px;
+                    //max-height: 0px;
+                    //height: 0px;
+                    //max-width: 0px;
+                    //width: 0px;
                 }
             }
         }
 
         .links.active {
+            display: grid;
             visibility: visible;
             opacity: 1;
-            max-height: 16rem;
-            overflow: visible;
+            //max-height: 24rem;
+            //overflow: visible;
+            gap: 0.5rem;
+            margin-bottom: 0.5rem;
 
             .link {
-                padding-top: .25rem;
-                padding-bottom: .25rem;
-
                 > * {
-                    max-height: 100%;
-                    height: 100%;
+                    //max-height: 100%;
+                    //height: 100%;
+                    //min-height: 100%;
+                    //max-width: 100%;
+                    //width: 100%;
                 }
             }
         }
@@ -110,6 +115,7 @@ nav.main {
         .links {
             justify-content: center;
             align-items: center;
+            gap: 1.25rem;
         }
 
         .dots {
